fixing x scrolling with smooth scrollbar limit option

--- a/src/index.css
+++ b/src/index.css
@@ -13,7 +13,8 @@ body {
   flex-direction: column;
   width: 100%;
   height: 100vh;
-  overflow: hidden;
+  overflow-y: hidden;
+  overflow-x: clip;
   scroll-behavior: smooth;
 }
 
@@ -28,4 +29,29 @@ body {
   text-align: center;
   width: 100%;
   background-color: transparent;
+}
+
+.loader {
+  width: 84px;
+  height: 84px;
+  position: relative;
+}
+.loader:before , .loader:after {
+  content: "";
+  position: absolute;
+  left: 50%;
+  bottom: 0;
+  width:64px;
+  height: 64px;
+  border-radius: 50%;
+  background:#FFF;
+  transform: translate(-50% , -100%)  scale(0);
+  animation: push 2s infinite linear;
+}
+.loader:after {
+  animation-delay: 1s;
+}
+@keyframes push {
+    0% , 50%{ transform: translate(-50% , 0%)  scale(1) }
+  100% { transform: translate(-50%, -100%) scale(0) }
 }
